add style for library

--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -178,3 +178,67 @@
   margin: 0;
   color: var(--error-color);
 }
+
+//background for library
+
+.header-library {
+  padding-top: 40px;
+  min-height: 230px;
+
+  background-image: url('../images/header/background/mobile/mobile-libBg1x.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  @media screen and (min-width: 768px) {
+    background-image: url('../images/header/background/tablet/tablet-libBg1x.jpg');
+  }
+  @media screen and (min-width: 1024px) {
+    background-image: url('../images/header/background/desktop/desktop-libBg1x.jpg');
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url('../images/header/background/mobile/mobile-libBg2x.jpg');
+    @media screen and (min-width: 768px) {
+      background-image: url('../images/header/background/tablet/tablet-libBg2x.jpg');
+    }
+    @media screen and (min-width: 1024px) {
+      background-image: url('../images/header/background/desktop/desktop-libBg2x.jpg');
+    }
+  }
+}
+
+//buttons
+.buttons-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+.btn {
+  text-transform: uppercase;
+  width: 130px;
+  height: 44px;
+  border: 1px;
+  border-radius: 5px;
+
+  @media screen and (min-width: 768px) {
+    width: 136px;
+  }
+}
+.btn-active {
+  background-color: var(--accent-color);
+  box-shadow: 0px 8px 43px 0px #ff6b0199;
+}
+
+.btn-disable {
+  background-color: transparent;
+}
+
+//style for display none
+
+.form-none {
+  display: none;
+}
+.buttons-none {
+  display: none;
+}
