--- a/src/templates/oneMovieCard.hbs
+++ b/src/templates/oneMovieCard.hbs
@@ -3,12 +3,18 @@
     <div class='movie__one-card'>
         <div class='movie__thumb'>
             <div class='movie__thumb-img'>
-                <img class='movie__img' src={{posterUrl}} alt={{title}} id='{{id}}' />
-            </div>
+                {{#if poster_path}}
+                <img class='movie__img' src='https://image.tmdb.org/t/p/w500/{{poster_path}}' alt={{title}} id='{{id}}' />
+                {{else}}
+                <img class='movie__img' src='' alt={{title}} id='{{id}}' />
+                {{/if}}
+           </div>
             <div class='movie__title-thumb'>
                 <h4 class='movie__title'>{{title}}</h4>
                 <div class='movie__box-description'>
-                    <p class='movie__description'>{{stringDescription}}
+                    <p class="genres">{{mappedGenres}}</p>
+                    <p class="date">{{release_date}}</p>
+                    <p class='movie__description'>{{overview}}
                         <span class='movie__average'>{{vote_average}}</span>
                     </p> 
                 </div>
