--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,8 +18,8 @@
     ></button>
           <ul class="developers__list">
           <li class="developers__item">
-          <img src="./images/icons/ilona.jpg" alt="Ілона Миронюк" width="130" height="150" />
-          <div class="expert">
+         <img class="developers__foto" src="./images/icons/ilona.jpg" alt="Ілона Миронюк" width="130" height="150"/>
+          <div>
           <h3 class="developers-text">Ілона Миронюк</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -54,8 +54,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/ilona.jpg" alt="Артем Білодід" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/artem.jpg" alt="Артем Білодід" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Артем Білодід</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -90,8 +90,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/oleksandr.jpg" alt="Олександр Корнієць" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/oleksandr.jpg" alt="Олександр Корнієць" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Олександр Корнієць</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -126,8 +126,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/ilona.jpg" alt="Роман Ллієнко" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/img.jpg" alt="Роман Ллієнко" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Роман Ллієнко</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -162,8 +162,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/tatyana.jpg" alt="Тетяна Тулук" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/tanya.jpg" alt="Тетяна Тулук" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Тетяна Тулук</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -198,8 +198,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/ilona.jpg" alt="Владислав Апелганс" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/img.jpg" alt="Владислав Апелганс" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Владислав Апелганс</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -234,8 +234,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/mihail.jpg" alt="Михайло Осіпчук" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/mihail.jpg" alt="Михайло Осіпчук" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Михайло Осіпчук</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -270,8 +270,8 @@
         </div>
         </li>
         <li class="developers__item">
-          <img src="./images/icons/ilona.jpg" alt="Олеся Жук" width="130" height="150" />
-          <div class="expert">
+          <img class="developers__foto" src="./images/icons/olesay.jpg" alt="Олеся Жук" width="130" height="150" />
+          <div>
           <h3 class="developers-text">Олеся Жук</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
@@ -305,13 +305,7 @@
           </ul>
         </div>
         </li>
-      
-      
-      </ul>
+         </ul>
       </div>
-
     </div>
-
-    
   </div>
-
