add logic to display current button in myLibrary AND to display list of films from LocalStorage

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,9 +18,9 @@
     <svg class="search__icon icon" width="12" height="12"><use href="./images/icons/icons.svg#icon-search"></use></svg>
     <p class="text-error hide" id="input-error">Search result not successful. Enter the correct movie name and </p>
 </div>
-<div class="buttons-box buttons-none">
-    <button type="button" class="btn-active btn">Watched</button>
-    <button type="button" class="btn-disable btn">queue</button>
+<div id="dinamic-buttons-js" class="buttons-box buttons-none">
+    <button id="watched" type="button" class="btn btn-marg">WATCHED</button>
+    <button id="queue" type="button" class="btn">QUEUE</button>
 </div>
   </div>
 </header>
