--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -228,13 +228,21 @@
     width: 136px;
   }
 }
+//displaying buttons in User Library
 .btn-active {
   background-color: var(--accent-color);
   box-shadow: 0px 8px 43px 0px #ff6b0199;
+  color: var(--second-color);
 }
 
 .btn-disable {
+  border: 1px solid var(--second-color);
   background-color: transparent;
+  color: var(--second-color);
+}
+
+.btn-marg {
+  margin-right: 15px;
 }
 
 //style for display none
