--- a/src/templates/oneMovieCard.hbs
+++ b/src/templates/oneMovieCard.hbs
@@ -4,7 +4,7 @@
         <div class='movie__thumb'>
             <div class='movie__thumb-img'>
                 {{#if poster_path}}
-                <img class='movie__img' src='https://image.tmdb.org/t/p/w500/{{poster_path}}' alt={{title}} id='{{id}}' data-sourse="{{id}} />
+                <img class='movie__img' src='https://image.tmdb.org/t/p/w500/{{poster_path}}' alt={{title}} id='{{id}}' data-sourse="{{id}}" />
                 {{else}}
                 <img class='movie__img' src='' alt={{title}} id='{{id}}' data-sourse="{{id}}"/>
                 {{/if}}
