--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -126,9 +126,9 @@
         </div>
         </li>
         <li class="developers__item">
-          <img class="developers__foto" src="./images/icons/img.jpg" alt="Роман Ллієнко" width="130" height="150" />
+          <img class="developers__foto" src="./images/icons/roman.jpg" alt="Роман Ллієнко" width="130" height="150" />
           <div>
-          <h3 class="developers-text">Роман Ллієнко</h3>
+          <h3 class="developers-text">Роман Ілієнко</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
               <a href="" class="social-icon-link">
@@ -198,9 +198,9 @@
         </div>
         </li>
         <li class="developers__item">
-          <img class="developers__foto" src="./images/icons/img.jpg" alt="Владислав Апелганс" width="130" height="150" />
+          <img class="developers__foto" src="./images/icons/vlad.jpg" alt="Владислав Апелганс" width="130" height="150" />
           <div>
-          <h3 class="developers-text">Владислав Апелганс</h3>
+          <h3 class="developers-text">Владислав Апельганц</h3>
           <ul class="list socials-icon">
             <li class="socials-icon-item">
               <a href="" class="social-icon-link">
