--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -122,8 +122,11 @@
   text-align: center;
   background-color: #e5e5e5;
   padding: 10px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),0px 1px 1px rgba(0, 0, 0, 0.14),0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
   @media screen and (max-width: 767px) {
-    height: 100vh;
+    position: absolute;
+    top: 0;
     width: 320px;
   }
 }
