--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -1,38 +1,156 @@
 .gallery {
+  padding-top: 20px;
+  padding-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 50px;
+  }
 }
 
 .container {
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    padding: 0px 20px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding: 0px 75px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    padding: 0px 70px;
+  }
 }
 
 .gallery__container {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .movie__list-item {
+  flex-basis: calc((100% - 4 * 20px) / 4);
 }
 
 .movie__one-card {
+  position: relative;
+  overflow: hidden;
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
 }
 
 .movie__thumb {
 }
 
 .movie__thumb-img {
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 480px) {
+    max-width: 440px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 294px;
+    height: 398px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 274px;
+    height: 398px;
+  }
 }
 
 .movie__img {
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .movie__title-thumb {
+  @media screen and (min-width: 480px) {
+    max-width: 440px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 294px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 274px;
+  }
 }
 
 .movie__title {
+  display: block;
+  width: inherit;
+  color: var(--primary-color);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
 }
 
 .movie__box-description {
+  display: flex;
+  justify-content: start;
 }
 
 .movie__description {
+  margin-right: 10px;
+  display: block;
+  color: var(--primary-color);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+.genres {
+  margin-right: 10px;
+  display: block;
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+.date {
+  margin-right: 10px;
+  display: block;
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
 }
 
 .movie__average {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 16px;
+  color: var(--second-color);
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  background-color: var(--accent-color);
+  border-radius: 5px;
 }
