--- a/src/templates/oneMovieCard.hbs
+++ b/src/templates/oneMovieCard.hbs
@@ -14,9 +14,9 @@
                 <div class='movie__box-description'>
                     <p class="genres">{{mappedGenres}}</p>
                     <p class="date">{{release_date}}</p>
-                    <p class='movie__description'>{{overview}}
-                        <span class='movie__average'>{{vote_average}}</span>
-                    </p> 
+                    <p class='movie__description hidden'>{{overview}}
+                        
+                    </p> <div class='movie__average '>{{vote_average}}</div>
                 </div>
             </div>
         </div>
