--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -11,3 +11,14 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+.hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
