--- a/src/templates/oneMovieCard.hbs
+++ b/src/templates/oneMovieCard.hbs
@@ -14,9 +14,8 @@
                 <div class='movie__box-description'>
                     <p class="genres">{{mappedGenres}}</p>
                     <p class="date">{{release_date}}</p>
-                    <p class='movie__description hidden'>{{overview}}
-                        
-                    </p> <div class='movie__average '>{{vote_average}}</div>
+                    <p class='movie__description hidden'>{{overview}}</p>
+                    <div class='movie__average hidden'>{{vote_average}}</div>
                 </div>
             </div>
         </div>
