--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -112,6 +112,7 @@
   font-size: 12px;
   line-height: 1.33;
   text-transform: uppercase;
+  margin-bottom: 0;
 }
 
 .movie__box-description {
@@ -128,22 +129,24 @@
   line-height: 1.33;
 }
 
-.genres {
+.movie__genres {
   margin-right: 10px;
   display: block;
   color: var(--accent-color);
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
+  margin-top: 0;
 }
 
-.date {
+.movie__date {
   margin-right: 10px;
   display: block;
   color: var(--accent-color);
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
+  margin-top: 0;
 }
 
 .movie__average {
