--- a/src/templates/oneMovieCard.hbs
+++ b/src/templates/oneMovieCard.hbs
@@ -12,8 +12,8 @@
             <div class='movie__title-thumb'>
                 <h4 class='movie__title'>{{title}}</h4>
                 <div class='movie__box-description'>
-                    <p class="genres">{{mappedGenres}}</p>
-                    <p class="date">{{release_date}}</p>
+                    <p class="movie__genres">{{mappedGenres}}</p>
+                    <p class="movie__date">{{release_date}}</p>
                     <p class='movie__description hidden'>{{overview}}</p>
                     <div class='movie__average hidden'>{{vote_average}}</div>
                 </div>
