--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -130,7 +130,7 @@
 }
 
 .movie__genres {
-  margin-right: 10px;
+  margin-right: 0;
   display: block;
   color: var(--accent-color);
   font-weight: 500;
@@ -147,6 +147,16 @@
   font-size: 12px;
   line-height: 1.33;
   margin-top: 0;
+
+  &::before {
+    content: '';
+    width: 4px;
+    height: 0px;
+    border: 1px solid var(--accent-color);
+    transform: rotate(90deg);
+    margin-left: 4px;
+    margin-right: 4px;
+  }
 }
 
 .movie__average {
