--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -149,11 +149,7 @@
   margin-top: 0;
 
   &::before {
-    content: '';
-    width: 4px;
-    height: 0px;
-    border: 1px solid var(--accent-color);
-    transform: rotate(90deg);
+    content: '|';
     margin-left: 4px;
     margin-right: 4px;
   }
