--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -8,30 +8,9 @@
   }
 }
 
-.container {
-  padding: 0 20px;
-  margin-left: auto;
-  margin-right: auto;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-    padding: 0px 20px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    padding: 0px 75px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
-    padding: 0px 70px;
-  }
-}
-
 .gallery__container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
   list-style: none;
   padding: 0px;
@@ -43,12 +22,15 @@
 }
 
 .movie__list-item {
+  flex-basis: 100%;
+  position: relative;
+
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 3 * 30px) / 3);
+    flex-basis: calc((100% - 2 * 30px) / 2);
   }
 
-  @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 4 * 30px) / 4);
+  @media screen and (min-width: 1024px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
   }
 }
 
@@ -72,11 +54,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: 294px;
+    width: 293px;
     height: 398px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1024px) {
     width: 274px;
     height: 398px;
   }
@@ -99,7 +81,7 @@
     width: 294px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1024px) {
     width: 274px;
   }
 }
