--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,6 +1,6 @@
-<section class="gallery">
-  <div class="container">
-    <ul id="card-set-js" class="gallery__container card-set"></ul>
+<section class="movie__section">
+  <div class="movie__container">
+    <ul id="card-set-js" class="movie__list card-set"></ul>
     <div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
   </div>
 </section>
