--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -146,9 +146,11 @@
   font-size: 12px;
   line-height: 1.33;
   margin-top: 0;
+  margin-right: 4px;
 }
 
 .movie__date {
+  position: relative;
   margin-right: 10px;
   display: block;
   color: var(--accent-color);
@@ -156,11 +158,16 @@
   font-size: 12px;
   line-height: 1.33;
   margin-top: 0;
+  margin-left: 4px;
 
   &::before {
-    content: '|';
-    margin-left: 4px;
-    margin-right: 4px;
+    position: absolute;
+    content: '';
+    left: -4px;
+    top: 2px;
+    width: 1px;
+    height: 12px;
+    background-color: var(--accent-color);
   }
 }
 
