--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,7 @@
 <section class="movie__section">
   <div class="movie__container">
+    <h1 class="hidden">Filmoteka</h1>
+    <h2 class="hidden">Films gallery</h2>
     <ul id="card-set-js" class="movie__list card-set"></ul>
     <div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
   </div>
