--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
     <svg class="search__icon icon" width="12" height="12"><use href="./images/icons/icons.svg#icon-search"></use></svg>
     <p class="text-error hide" id="input-error">Search result not successful. Enter the correct movie name and </p>
 </div>
-<div id="dinamic-buttons-js" class="buttons-box buttons-none">
+<div id="dinamic-buttons-js" class="buttons-box hide">
     <button id="watched" type="button" class="btn btn-marg">WATCHED</button>
     <button id="queue" type="button" class="btn">QUEUE</button>
 </div>
