--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -159,16 +159,12 @@
 }
 
 .search__icon {
-    fill: var(--second-color);
-    position: absolute;
-    top: 0;
-    transform: translateX(-20px) translateY(25%);
+  fill: var(--second-color);
+  position: absolute;
+  top: 0;
+  transform: translateX(-20px) translateY(25%);
 }
 
-.form-btn {
-  background: transparent;
-  border: none;
-}
 .text-error {
   margin: 0;
   color: var(--error-color);
@@ -215,7 +211,7 @@
   height: 44px;
   border: 1px;
   border-radius: 5px;
-
+  cursor: pointer;
   @media screen and (min-width: 768px) {
     width: 136px;
   }
