--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,3 +4,11 @@
     <div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
   </div>
 </section>
+
+<!-- КНОПКА ДЛЯ СПИННЕРА -->
+<div class="btn-container">
+      <button type="button" class="load-more-btn btn" data-action="load-more" >
+        <span class="spinner is-hidden" aria-hidden="true"></span>
+        <span class="label">Load More</span>
+      </button>
+</div>
