--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -6,3 +6,9 @@
     <div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
   </div>
 </section>
+  <button class="btn-up btn" type="button">
+    <svg class="up-icon icon" width="50" height="50">
+      <use href="./images/icons/icons.svg#icon-circle-up"></use>
+    </svg>
+  </button>
+
