update style icon

--- a/src/sass/components/_up-icon.scss
+++ b/src/sass/components/_up-icon.scss
@@ -1,13 +1,29 @@
 .up-icon {
+  width: 20px;
+  height: 20px;
   fill: var(--accent-color);
+
+  @media screen and (min-width: 768px) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .btn-up {
   position: fixed;
-  right: 50px;
-  bottom: 50px;
+  right: 30px;
+  bottom: 30px;
 
+  width: 20px;
+  height: 20px;
   border: none;
   background-color: transparent;
   cursor: pointer;
+
+  @media screen and (min-width: 768px) {
+    right: 30px;
+    bottom: 30px;
+    width: 40px;
+    height: 40px;
+  }
 }
