--- a/src/sass/layouts/_card-set.scss
+++ b/src/sass/layouts/_card-set.scss
@@ -1,12 +1,27 @@
 .card-set {
   display: flex;
   flex-wrap: wrap;
-  margin: -30px 0 0 -30px;
   list-style: none;
+
+  @media screen and (min-width: 320px) {
+    margin-top: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: -30px 0 0 -30px;
+  }
 }
 
 .card-set__item {
   position: relative;
-  margin-left: 30px;
-  margin-top: 30px;
+
+  @media screen and (min-width: 320px) {
+    margin-top: 20px;
+    margin-left: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
 }
