--- a/src/sass/components/_up-icon.scss
+++ b/src/sass/components/_up-icon.scss
@@ -1,29 +1,37 @@
 .up-icon {
-  width: 20px;
-  height: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
   fill: var(--accent-color);
-
-  @media screen and (min-width: 768px) {
-    width: 40px;
-    height: 40px;
-  }
+  width: 100%;
+  height: 100%;
 }
 
 .btn-up {
   position: fixed;
+  border: none;
+  border-radius: 50%;
+  background-color: var(--second-color);
+
   right: 30px;
   bottom: 30px;
-
-  width: 20px;
-  height: 20px;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-
-  @media screen and (min-width: 768px) {
-    right: 30px;
-    bottom: 30px;
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
+}
+.btn-up:focus .up-icon {
+  animation: animate 3000ms infinite;
+  @keyframes animate {
+    0% {
+      transform: scale(1);
+      opacity: 0.75;
+    }
+    50% {
+      transform: scale(1.5);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 0.75;
+    }
   }
 }
