--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -45,10 +45,15 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  width: 30px;
+  height: 30px;
 
   padding: 0px;
 
+  border-color: transparent;
+
   background-color: transparent;
+  background-image: url('../images/icons/icon-close.svg');
 }
 
 .modal__icon {
