--- a/src/templates/oneMovieModal.hbs
+++ b/src/templates/oneMovieModal.hbs
@@ -1,10 +1,22 @@
 <div class="modal">
-    <button class="modal__button-close">
-    </button>
+
+    <button class="modal__button-close"></button>
+
     <div class="modal_wrap">
-        <img src="https://image.tmdb.org/t/p/w500/{{poster_path}}" alt="film" class="modal_img" />
+
+        <img class="modal_img"
+        {{#if poster_path}}
+        src='https://image.tmdb.org/t/p/w500/{{poster_path}}'
+        {{else}}
+        src="No-Movies-For-Two-Years.jpg"
+        {{/if}}
+        alt="{{title}}" 
+        />
+
         <div class="modal_inner">
+
             <h2 class="modal_title">{{title}}</h2>
+
             <table class="modal_table">
                 <tbody>
                     <tr class="modal_item">
@@ -24,20 +36,15 @@
                     </tr>
                     <tr class="modal_item">
                         <td class="modal_subtitle">Genre</td>
-                        <td class="modal_text">
-                          {{#each genres}} 
-                            <span class="modal_genres">
-                                {{#with this}}
-                                 {{name}}
-                                {{/with}}
-                            </span> 
-                          {{/each}}
-                        </td>
+                        <td class="modal_text">{{genre}}</td>
                     </tr>
                 </tbody>
             </table>
+
             <h3 class="modal_caption">About</h3>
+
             <p class="modal_desc">{{overview}}</p>
+            
             <ul class="modal_list-button">
                 <li class="modal_item-button"><button class="modal_button">add to watched</button></li>
                 <li class="modal_item-button"><button class="modal_button">add to queue</button></li>
