fixed theme switcher

--- a/src/sass/base/_theme-switch.scss
+++ b/src/sass/base/_theme-switch.scss
@@ -1,11 +1,21 @@
 body.light-theme {
   background-color: #fff;
-  color: #333333;
+
+  .theme-switch__marker {
+    color: #ffffff;
+  }
 }
 
 body.dark-theme {
   background-color: #333333;
-  color: #fff;
+  
+  .movie__title {
+    color: #fff;
+  }
+
+  .theme-switch__icon {
+    color: #ff6b08; 
+  }
 }
 
 .toolbar {
@@ -21,7 +31,7 @@ body.dark-theme {
 }
 
 .theme-switch__icon {
-  color: currentColor;
+  color: #ffffff;
   height: 24px;
   width: 24px;
   margin-right: 8px;
@@ -59,7 +69,7 @@ body.dark-theme {
   height: 100%;
   color: transparent;
   user-select: none;
-  background-color: #333;
+  background-color: #ff6b08;
   border-radius: inherit;
   z-index: 1;
   cursor: pointer;
@@ -67,19 +77,19 @@ body.dark-theme {
 
 .theme-switch__marker {
   position: relative;
-  background-color: #fff;
-  width: 26px;
-  height: 26px;
+  background-color: #ff6b08;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   z-index: 2;
   pointer-events: none;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.7);
   transform: translateX(3px);
   transition: transform 250ms var(--timing-function);
 }
 
 .theme-switch__toggle:checked+.theme-switch__track {
-  background-color: #d3d3d4;
+  background-color:#ffffff;
 }
 
 .theme-switch__toggle:checked~.theme-switch__marker {
@@ -88,5 +98,5 @@ body.dark-theme {
 
 .theme-switch__toggle:focus+.theme-switch__track,
 .theme-switch__toggle:active+.theme-switch__track {
-  box-shadow: 0 0 0 3px #2196f3;
+  box-shadow: 0 0 0 2px #fff;
 }
