--- a/src/sass/layouts/_oneMovieCard.scss
+++ b/src/sass/layouts/_oneMovieCard.scss
@@ -36,7 +36,7 @@
 .movie__list {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: top;
   flex-wrap: wrap;
   list-style: none;
   padding: 0px;
