--- a/src/templates/oneMovieCard.hbs
+++ b/src/templates/oneMovieCard.hbs
@@ -2,7 +2,7 @@
     <li class='movie__list-item card-set__item' data-id={{id}}>
         <div class='movie__thumb'>
             <div class='movie__thumb-img'>
-                <img class='movie__img' {{#if poster_path}} src='https://image.tmdb.org/t/p/w500/{{poster_path}}' {{else}}
+                <img class='movie__img' {{#if poster_path}} src='https://image.tmdb.org/t/p/w500{{poster_path}}' {{else}}
                     src="no-poster.png" {{/if}} alt='{{title}}' id='{{id}}' data-sourse='{{id}}' />
             </div>
             <div class='movie__title-thumb'>
