added dark theme colors

--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -1,4 +1,5 @@
 $pageFontSizeMain: 12px;
+
 .tui-pagination {
   display: flex;
   align-items: center;
@@ -44,6 +45,45 @@ $pageFontSizeMain: 12px;
   line-height: 1.333;
   text-decoration: none;
   vertical-align: middle;
+}
+
+.dark-theme {
+  .tui-page-btn {
+    color: #fff;
+  }
+
+  .tui-ico-first,
+  .tui-ico-prev,
+  .tui-ico-next,
+  .tui-ico-last,
+  .tui-ico-ellip {
+    filter: brightness(6);
+  }
+
+  .tui-is-selected {
+    filter: none;
+    background-color: var(--accent-color);
+  }
+
+  .tui-page-btn:hover {
+    color: #000;
+
+    &.tui-is-selected {
+      color: #fff;
+    }
+
+    .tui-ico-first,
+    .tui-ico-prev,
+    .tui-ico-next,
+    .tui-ico-last,
+    .tui-ico-ellip {
+      filter: none;
+    }
+  }
+
+  .tui-is-disabled:hover {
+    background-color: transparent;
+  }
 }
 
 .tui-page-btn:hover {
