Выравняла цифры  рейтинга в модалке

--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -46,6 +46,8 @@
   top: 10px;
   right: 10px;
 
+  cursor: pointer;
+
   width: 30px;
   height: 30px;
 
@@ -162,26 +164,28 @@
 }
 
 .modal_inner-rating {
-  display: inline-block;
-  padding: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
   width: 36px;
   height: 16px;
 
   border-radius: 5px;
-  text-align: center;
 
   color: var(--second-color);
   background-color: var(--accent-color);
 }
 
 .modal_inner-votes {
-  display: inline-block;
-  padding: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
   width: 36px;
   height: 16px;
 
   border-radius: 5px;
-  text-align: center;
 
   background-color: var(--footer-background);
 }
@@ -233,6 +237,8 @@
 
   border: 1px solid var(--primary-color);
   border-radius: 5px;
+
+  cursor: pointer;
 
   font-weight: 500;
   font-size: 12px;
