--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *,
@@ -10,6 +11,23 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
+  height: 100%;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
+.movie__section {
+  flex: 1 1 auto;
 }
 
 .hidden {
