--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -5,7 +5,7 @@ $pageFontSizeMain: 12px;
   align-items: center;
   justify-content: center;
   gap: 2px;
-  margin-top: 40px;
+  margin-bottom: 10px;
   line-height: normal;
   text-align: center;
   font-size: 0;
