пофиксила модальное окно, что бы в мобильной версии не улитало верх. Сделала отступы вокруг модалки.

--- a/src/templates/oneMovieModal.hbs
+++ b/src/templates/oneMovieModal.hbs
@@ -4,14 +4,17 @@
 
     <div class="modal_wrap">
 
-        <img class="modal_img"
-        {{#if poster_path}}
-        src='https://image.tmdb.org/t/p/w500/{{poster_path}}'
-        {{else}}
-        src="no-poster.png"
-        {{/if}}
-        alt="{{title}}" 
-        />
+        <div class="modal_thumb">
+            <img class="modal_img" 
+            {{#if poster_path}} 
+            src='https://image.tmdb.org/t/p/w500/{{poster_path}}' 
+            {{else}}
+            src="no-poster.png" 
+            {{/if}} 
+            alt="{{title}}" />
+        </div>
+
+
 
         <div class="modal_inner">
 
