Пофиксила название файлов

--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -55,11 +55,11 @@
   border-color: transparent;
 
   background-color: transparent;
-}
 
-.modal__button-close:hover,
-.modal__button-close:hover {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .modal_wrap {
@@ -72,7 +72,6 @@
 
 .modal_thumb {
   margin-bottom: 30px;
-  // max-width: 440;
 
   @media screen and (min-width: 768px) {
     margin-bottom: 0px;
@@ -127,40 +126,27 @@
 
 .modal_item {
   display: block;
-  padding-bottom: 10px;
-}
 
-.modal_subtitle {
   margin: 0px;
-  padding: 0px;
-  width: 108px;
+  padding: 0px 0px 10px 0px;
 
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
+
+  &:nth-child(3) .modal_text {
+    text-transform: uppercase;
+  }
+}
+
+.modal_subtitle {
+  width: 108px;
 
   color: var(--modal-color);
 
   @media screen and (min-width: 1024px) {
     width: 152px;
   }
-}
-
-.modal_genres:not(:last-child)::after {
-  content: ',';
-}
-
-.modal_text {
-  margin: 0px;
-  padding: 0px;
-
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.33;
-}
-
-.modal_item:nth-child(3) .modal_text {
-  text-transform: uppercase;
 }
 
 .modal_inner-rating {
@@ -257,11 +243,11 @@
     width: 136px;
     height: 44px;
   }
-}
 
-.modal_button:hover,
-.modal_button:focus {
-  border-color: ar(--accent-color);
-  color: var(--second-color);
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    border-color: ar(--accent-color);
+    color: var(--second-color);
+    background-color: var(--accent-color);
+  }
 }
