--- a/src/templates/one-movie-modal.hbs
+++ b/src/templates/one-movie-modal.hbs
@@ -47,8 +47,8 @@
             <p class="modal_desc">{{overview}}</p>
             
             <ul class="modal_list-button">
-                <li class="modal_item-button"><button class="modal_button">add to watched</button></li>
-                <li class="modal_item-button"><button class="modal_button">add to queue</button></li>
+            <li class="modal_item-button"><button id="toWatch" class="modal_button">add to watched</button></li>
+            <li class="modal_item-button"><button id="toQuequ" class="modal_button">add to queue</button></li>
             </ul>
         </div>
     </div>
