spinner html, css

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,30 +1,10 @@
 <section class="movie__section">
   <div class="movie__container">
-
-<!-- RAINBOW_SPINER -->
-<div class="spiner-js loader hidden">
-  <div class="loader-inner">
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-  </div>
-</div>
-<!-- RAINBOW_SPINER -->
-
     <h1 class="hidden">Filmoteka</h1>
     <h2 class="hidden">Films gallery</h2>
+
+    <include src="./partials/rainbow-spiner.html"></include>
+
     <ul id="card-set-js" class="movie__list card-set"></ul>
     <div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
   </div>
