--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -3,6 +3,7 @@
 
   <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
   <img src="images/demo.jpg" alt="" width="320" />
+  Hello world
   <p>
     Плагин
     <a
