--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,8 +1,8 @@
-<article class="example">
+<article class="example container">
   <h1>HTML-фрагменты</h1>
 
   <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
-  <img src="images/demo.jpg" alt="" width="320" />
+  <img src="img/demo.jpg" alt="" width="320" />
   <p>
     Плагин
     <a
@@ -31,3 +31,7 @@
 
   <div class="background"></div>
 </article>
+
+<div class="container">
+  <h1>SDZGYUSDKNMV;</h1>
+</div>
