--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -21,7 +21,7 @@
 .example .background {
   height: 240px;
   // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../images/demo.jpg');
+  background-image: url('../img/demo.jpg');
   background-size: cover;
   background-position: center;
 }
