--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,5 +3,6 @@
  * Все паршалы подключаются сюда.
  */
 
-// Стили для файла с примером HTML-фрагмента
+// // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './container';
