--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -12,16 +12,14 @@ a {
 button {
   border: none;
   cursor: pointer;
-}
-
-ul li {
-  list-style: none;
+  padding: 0;
 }
 
 ul,
 li {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 input,
