Add project files

--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -13,7 +13,7 @@
       posthtml-include
     </a>
     позволяет добавлять в HTML-файлы страниц код из других HTML-файлов (фрагментов). Фрагменты
-    хранятся в папке
+    хранятся в папке!
     <code>src/partials</code>. Добавление происходит при компиляции файлов страниц, например
     <code>index.html</code>.
   </p>
