--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -17,6 +17,7 @@
     <code>src/partials</code>. Добавление происходит при компиляции файлов страниц, например
     <code>index.html</code>.
   </p>
+  <p>New string</p>
 
   <p>
     Этот файл <code>example.html</code> &mdash; пример такого фрагмента, с разметкой определённой
