add fonts and color palette

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,6 @@
 @import './utils/reset';
 @import './utils/variables';
+@import './utils/vars';
+@import './base/container';
 @import './components/base';
 @import './components/about';
