--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,5 @@
 @import './utils/reset';
 @import './utils/variables';
+@import './utils/visually-hidden';
 @import './components/base';
+@import './components/gallery';
