--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -1,6 +1,6 @@
-.customer_container{
-color: #212121;
-background-color: #FAFAFA;
+.customer_container {
+  color: #212121;
+  background-color: #fafafa;
 }
 .customer_img {
   margin-left: auto;
