--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,5 +5,6 @@
 @import './components/base';
 @import './components/customer_reviews';
 @import './components/about';
+@import './components/advantage';
 @import './components/gallery';
 @import './components/footer';
