bugfix/разные строки

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -20,12 +20,12 @@
             </li>
             <li class="contacts-section__item">
                 <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts">
-                        <a class="contacts-section__link__contacts" href="tel:+610383766284">
+                    <li class="contacts-section__item__contacts_tel">
+                        <a class="contacts-section__link__contacts link" href="tel:+610383766284">
                             +61(0) 383 766 284</a>
                     </li>
-                    <li class="">
-                        <a class="contacts-section__link__contacts" href="malito:noreply@envato.com">
+                    <li class="contacts-section__item__contacts_post">
+                        <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
@@ -52,11 +52,11 @@
             <li class="contacts-section__item">
                 <ul class="contacts-section__list__contacts">
                     <li class="contacts-section__item__contacts">
-                        <a class="contacts-section__link__contacts" href="tel:+610383766284">
+                        <a class="contacts-section__link__contacts link" href="tel:+610383766284">
                             +61(0) 383 766 284</a>
                     </li>
                     <li class="contacts-section__item__contacts">
-                        <a class="contacts-section__link__contacts" href="malito:noreply@envato.com">
+                        <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
@@ -83,11 +83,11 @@
             <li class="contacts-section__item">
                 <ul class="contacts-section__list__contacts">
                     <li class="contacts-section__item__contacts">
-                        <a class="contacts-section__link__contacts" href="tel:+610383766284">
+                        <a class="contacts-section__link__contacts link" href="tel:+610383766284">
                             +61(0) 383 766 284</a>
                     </li>
                     <li class="contacts-section__item__contacts">
-                        <a class="contacts-section__link__contacts" href="malito:noreply@envato.com">
+                        <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
