--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -28,6 +28,7 @@
           type="image/png"
         />
         <img
+          class="gallery__img"
           src="./images/gallery/gallery-1_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -62,7 +63,7 @@
           type="image/png"
         />
         <img
-          class="gallery__img-top"
+          class="gallery__img gallery__img--top"
           src="./images/gallery/gallery-2_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -94,6 +95,7 @@
           type="image/png"
         />
         <img
+          class="gallery__img"
           src="./images/gallery/gallery-3_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -127,7 +129,7 @@
           type="image/png"
         />
         <img
-          class="gallery__img-top"
+          class="gallery__img gallery__img--top"
           src="./images/gallery/gallery-4_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -159,6 +161,7 @@
           type="image/png"
         />
         <img
+          class="gallery__img gallery__img--bottom"
           src="./images/gallery/gallery-5_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -192,7 +195,7 @@
           type="image/png"
         />
         <img
-          class="gallery__img-top"
+          class="gallery__img gallery__img--top"
           src="./images/gallery/gallery-6_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -224,6 +227,7 @@
           type="image/png"
         />
         <img
+          class="gallery__img"
           src="./images/gallery/gallery-7_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -257,7 +261,7 @@
           type="image/png"
         />
         <img
-          class="gallery__img-top"
+          class="gallery__img gallery__img--top"
           src="./images/gallery/gallery-8_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -289,6 +293,7 @@
           type="image/png"
         />
         <img
+          class="gallery__img"
           src="./images/gallery/gallery-9_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
@@ -322,6 +327,7 @@
           type="image/png"
         />
         <img
+          class="gallery__img"
           src="./images/gallery/gallery-10_sm.png"
           alt="gallery-ice-cream"
           loading="lazy"
