--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery__container {
   display: flex;
-  padding-bottom: 60px;
+  padding: 0 0 60px;
 
   @media screen and (min-width: 1200px) {
     padding: 0 93px 120px 94px;
@@ -8,6 +8,8 @@
 }
 
 .gallery__column {
+  flex-basis: calc((100% - 15px) / 7);
+
   &:not(:last-child) {
     margin-right: 3px;
     @media screen and (min-width: 768px) {
@@ -19,7 +21,7 @@
   }
 
   &--first {
-    padding-top: 45px;
+    padding-top: 13.75vw;
     @media screen and (min-width: 768px) {
       padding-top: 109px;
     }
@@ -29,7 +31,7 @@
   }
 
   &--second {
-    padding-top: 28px;
+    padding-top: 8.75vw;
     @media screen and (min-width: 768px) {
       padding-top: 67px;
     }
@@ -37,9 +39,11 @@
       padding-top: 89px;
     }
   }
-
+  &--third {
+    flex-basis: calc((100% - 15px) / 7 * 2);
+  }
   &--fourth {
-    padding-top: 31px;
+    padding-top: 9.7vw;
     @media screen and (min-width: 768px) {
       padding-top: 75px;
     }
@@ -49,7 +53,7 @@
   }
 
   &--fifth {
-    padding-top: 21px;
+    padding-top: 6.6vw;
     @media screen and (min-width: 768px) {
       padding-top: 50px;
     }
@@ -59,7 +63,7 @@
   }
 
   &--sixth {
-    padding-top: 49px;
+    padding-top: 15.3vw;
     @media screen and (min-width: 768px) {
       padding-top: 117px;
     }
@@ -68,13 +72,20 @@
     }
   }
 }
+.gallery__img {
+  width: 100%;
 
-.gallery__img-top {
-  margin-bottom: 3px;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 6px;
+  &--top {
+    margin-bottom: 1vw;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 6px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 8px;
+    }
   }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 8px;
+
+  &--bottom {
+    width: 48.76%;
   }
 }
