--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,3 +1,22 @@
+.gallery {
+  background-image: linear-gradient(
+    $primary-background-color 14%,
+    $white-color 14%
+  );
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+      $primary-background-color 48%,
+      $white-color 48%
+    );
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+      $primary-background-color 16%,
+      $white-color 16%
+    );
+  }
+}
 .gallery__container {
   display: flex;
   padding: 0 0 60px;
